deploy-cid-scp0-image-tool.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: image-tool
    app.kubernetes.io/component: image-tool
    app.kubernetes.io/instance: image-tool
  name: image-tool
  namespace: scp-operations-cid
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: image-tool
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: image-tool
    spec:
      containers:
      - args:
        - -server
        - -socks5=no
        command:
        - image-tools
        image: registry-quay-quay.apps.pro-scp1.sf-rz.de/scp-images/image-tool:latest
        imagePullPolicy: Always
        name: image-tool
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: image-tool
    app.kubernetes.io/component: image-tool
    app.kubernetes.io/instance: image-tool
  name: image-tool
  namespace: scp-operations-cid
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    deployment: image-tool
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: image-tool
    app.kubernetes.io/component: image-tool
    app.kubernetes.io/instance: image-tool
  name: image-tool
  namespace: scp-operations-cid
spec:
  host: image-tool.svc.cid-scp0.sf-rz.de
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: image-tool
    weight: 100
  wildcardPolicy: None
