deploy-pro-scp0-image-tool.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: image-tool
    app.kubernetes.io/component: image-tool
    app.kubernetes.io/instance: image-tool
  name: image-tool
  namespace: scp-operations-pro
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: image-tool
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: image-tool
    spec:
      containers:
      - name: image-tool
        image: registry-quay-quay.apps.pro-scp1.sf-rz.de/scp/image-tool:latest
        imagePullPolicy: Always
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 2
            memory: 1024Mi
          requests:
            cpu: 1
            memory: 512Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: image-tool
    app.kubernetes.io/component: image-tool
    app.kubernetes.io/instance: image-tool
  name: image-tool
  namespace: scp-operations-pro
spec:
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    deployment: image-tool
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: image-tool
    app.kubernetes.io/component: image-tool
    app.kubernetes.io/instance: image-tool
    router: srv
  name: image-tool
  namespace: scp-operations-pro
spec:
  host: image-tool-scp-operations.scp0-srv.pro.sf-rz.de
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: image-tool
    weight: 100
  wildcardPolicy: None
